# libwaveform

./: .clang-format  .gitignore  .gitmodules  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libwaveform.pc.in  waveform.pc.in  waveform.vim
agl/: Makefile.am  README  actor.c  actor.h  agl.pc.in  agl.vapi  behaviour.h  debug.h  ext.c  ext.h  fbo.c  fbo.h  fontmap.c  fontmap.h  gresource.xml  material.c  material.h  observable.c  observable.h  pango_font.c  pango_font.h  pango_render.c  pango_render.h  shader.h  transform.c  transform.h  typedefs.h  utils.c  utils.h  x11.c  x11.h
agl/behaviours/: Makefile.am  border.c  border.h  clip.c  clip.h  hover.c  hover.h  key.c  key.h  selectable.c  selectable.h
agl/resources/shaders/: color.glsl  coloring.glsl  preamble.fs.glsl  preamble.glsl  preamble.vs.glsl
agl/shaders/: Makefile  Makefile.am  alpha_map.frag  make_shaders  plain_colour.frag  plain_colour.vert
agl/text/: Makefile.am  driver.c  driver.h  enums.h  gdkrgba.c  gdkrgba.h  gdktexture.h  glyphcache.c  glyphcache.h  opbuffer.c  opbuffer.h  pango.c  pango.h  profiler.c  profiler.h  renderer.c  renderer.h  renderops.c  renderops.h  roundedrect.c  roundedrect.h  shaderbuilder.c  shaderbuilder.h  text_buffer.c  text_buffer.h  text_input.c  text_input.h  text_node.c  text_node.h  textureatlas.c  textureatlas.h  types.h
debug/: Makefile.am  debug.c
decoder/: Makefile.am  ad.c  ad.h  debug.h  ffmpeg.c  sndfile.c
glib/: Makefile.am  garcbox.c  grcbox.c  grcbox.h  grcboxprivate.h  grefcount.c  grefcount.h
gtkglext-1.0/: Makefile.am  autogen.sh  configure.ac  gtkglext-uninstalled.pc.in  gtkglext.pc.in
gtkglext-1.0/gdk/: .gitignore  Makefile.am  gdkgl.h  gdkglconfig.c  gdkglconfig.h  gdkglcontext.c  gdkglcontext.h  gdkgldebug.h  gdkgldrawable.c  gdkgldrawable.h  gdkglenumtypes.h  gdkglglext.c  gdkglglext.h  gdkglglxext.c  gdkglglxext.h  gdkglinit.c  gdkglinit.h  gdkgloverlay.c  gdkgloverlay.h  gdkglpixmap.c  gdkglpixmap.h  gdkglprivate.h  gdkglquery.c  gdkglquery.h  gdkgltokens.h  gdkgltypes.h  gdkglwindow.c  gdkglwindow.h  gdkglx.h  gtkglenumtypes.h.template
gtkglext-1.0/gdk/glext/: gen-gdkglglxext-c.pl
gtkglext-1.0/gtk/: .gitignore  Makefile.am  gtkgl.h  gtkgldebug.h  gtkglinit.c  gtkglprivate.h  gtkglversion.h.in  gtkglwidget.c  gtkglwidget.h
lib/: Makefile.am
lib/debug/: debug.c  debug.h
lib/test/: Makefile.am  runner.c  runner.h  utils.c  utils.h
package/gentoo/media-libs/libwaveform/: libwaveform-0.1.0.ebuild
sdl/: Makefile.am  README  SDL2_framerate.h
shaders/: Makefile  Makefile.am  ass.frag  ass.vert  cursor.frag  cursor.vert  hires.frag  hires_ng.frag  hires_ng.vert  horizontal.frag  lines.frag  lines.vert  make_shaders  peak.frag  peak.vert  peak_nonscaling.frag  peak_nonscaling.vert  ruler.frag  ruler.vert  ruler_bottom.frag  ruler_frames.frag  ruler_frames.vert  texture_2d.frag  vertical.frag  vertical_peak.frag  vertical_peak.vert
test/: 32bit.c  Makefile.am  _cache_behaviour.c  _cache_behaviour.h  actor.c  actor_no_scene.c  actor_plus.c  actor_test.c  ass.c  ayyi_utils.c  ayyi_utils.h  cache.c  common.c  common.h  common2.c  common2.h  cpgrs.cc  cpgrs.h  frame_rate.c  generator.cc  glx.c  group.c  hires.c  hires_test.c  input.c  large_files.c  list.c  med_textures.c  multi_scene.c  no_scene.c  pixbuf.c  promise.c  res_vhi.c  res_vhi_blocks.c  res_vhi_scrollable.c  res_vlow.c  resources.c  run  scenegraph.c  sdl.c  (+14 more)
test/suppressions/: glib.supp  gtk4.supp  mesa.supp  test.supp
transition/: Makefile.am  animator.c  animator.h  frameclock.c  frameclock.h  frameclockidle.c  frameclockidle.h  frameclockprivate.h  frametimings.c  frametimings.h  globals.c  transition.c  transition.h
ui/: Makefile.am  actor.c  actor.h  context.c  context.h  debug_helper.c  debug_helper.h  fbo.c  fbo.h  invalidator.c  invalidator.h  pixbuf.c  pixbuf.h  private.h  shader.c  shader.h  texture_cache.c  texture_cache.h  transition_behaviour.c  transition_behaviour.h  typedefs.h  utils.c  utils.h  view.c  view.h  view_plus.c  view_plus.h
ui/actors/: Makefile.am  background.c  background.h  debug.c  debug.h  frames_ruler.c  frames_ruler.h  grid.c  grid.h  group.c  hover.c  hover.h  labels.c  plain.c  plain.h  ruler.c  ruler.h  spinner.c  spinner.h  spp.c  spp.h  text.c  text.h
ui/renderer/: ng.c  res_hi.c  res_hi_gl2.c  res_lo.c  res_med.c  res_v_hi.c  res_v_low.c
waveform/: Makefile.am  actor.c  actor.h  alphabuf.c  alphabuf.h  animator.c  animator.h  ass.h  audio.c  audio.h  audio_file.c  audio_file.h  background.h  canvas.c  canvas.h  context.c  context.h  debug.h  debug_helper.h  fbo.c  fbo.h  gl_ext.c  gl_ext.h  gl_utils.c  gl_utils.h  global.c  grid.c  grid.h  group.h  hi_res.c  hi_res.h  hi_res_gl2.c  hi_res_ng.c  hover.h  invalidator.h  labels.h  med_res.c  peak.c  peak.h  peakgen.c  (+38 more)
waveform/actors/: Makefile.am  background.c  background.h  debug.c  debug.h  grid.c  grid.h  group.c  group.h  labels.c  labels.h  plain.c  plain.h  ruler.c  spinner.c  spinner.h  spp.c  spp.h  text.c  text.h
waveform/loaders/: Makefile.am  ardour.c  ardour.h  riff.c  riff.h
waveform/renderer/: ng.c  res_hi.c  res_lo.c  res_med.c  res_v_hi.c  res_v_low.c
wf/: Makefile.am  audio.c  audio.h  debug.h  global.c  peakgen.c  peakgen.h  private.h  promise.c  promise.h  typedefs.h  utils.c  utils.h  waveform.c  waveform.h  worker.c  worker.h
wf/loaders/: Makefile.am  ardour.c  ardour.h  riff.c
